# gebr-menus

./: Placeholder.md  ProjectHome.md  authors.svn2cl
demos/: CommonOffset.lnez  Making_Data.prjz  NMO.prjz  Sudipdivcor.lnez  Sudivcor.lnez  Sugain.lnez
demos/Amplitude_Correction/: Sudipdivcor.lnez
demos/Making_Data/: CommonOffset.lnez  ShotGathers.lnez
gebr-menus-shtools/debian/: control  postinst.ex  postrm.ex  prerm.ex  rules
gebr-menus-shtools/menus/: cal.mnu  catdoc.mnu  ddconv.mnu  df.mnu  elinks.mnu  gnutar.mnu  uname.mnu
gebr-menus-shtools/rpm/: gebr-menus-shtools.opensuse.spec.in
karlsruhe/: AUTHORS  ChangeLog  Makefile.am  configure.ac
karlsruhe/menus/: Makefile.am  crsstack-super.mnu  crsstack-topo.mnu  crsstack.mnu
shtools/: AUTHORS  ChangeLog  Makefile.am  configure.ac
shtools/debian/: changelog  preinst.ex
shtools/menus/: Makefile.am  append.mnu  cal.mnu  cat.mnu  catdoc.mnu  cp.mnu  ddconv.mnu  df.mnu  du.mnu  echo.mnu  elinks.mnu  evince.mnu  gcc.mnu  gnutar.mnu  gzip.mnu  ls.mnu  odt2txt.mnu  pdftopsacro.mnu  rm.mnu  save.mnu  sort.mnu  uname.mnu  uptime.mnu  wget.mnu  xlhtml.mnu  xmessage.mnu  zenity.mnu
shtools/rpm/: gebr-menus-shtools.fedora.spec.in  gebr-menus-shtools.mandriva.spec.in
su/: AUTHORS  ChangeLog  Makefile.am  configure.ac
su/demos/: Amplitude_Correction.prjx  Amplitude_Correction.prjz  Block.prjx  Deconvolution.prjx  Deconvolution.prjz  Dip_Moveout.prjx  Dip_Moveout.prjz  Filtering.prjx  Filtering.prjz  Makefile.am  Making_Data.prjx  Making_Data.prjz  Migration_Inversion.prjx  Migration_Inversion.prjz  Muting.prjx  Muting.prjz  NMO.prjx  NMO.prjz  Noise.prjx  Noise.prjz  Offset_Continuation.prjx  Offset_Continuation.prjz  Plotting.prjx  Plotting.prjz  Ray_Tracing.prjx  Ray_Tracing.prjz  Stacking_Traces.prjx  Stacking_Traces.prjz  Synthetic.prjx  Synthetic.prjz  Time_Freq_Analysis.prjx  Time_Freq_Analysis.prjz  Trace_Headers_and_Values.prjx  Trace_Headers_and_Values.prjz  Velocity_Analysis.prjx  Velocity_Analysis.prjz  Velocity_Profiles.prjx  Velocity_Profiles.prjz  Vibroseis_Sweeps.prjx  _Install_SU.prjx
su/demos/Amplitude_Correction/: Sudipdivcor.lnez  Sudivcor.lnez  Sugain.lnez
su/demos/Deconvolution/: FX.lnez
su/demos/Dip_Moveout/: Converted_Wave.lnez  Fti_Media.lnez
su/demos/Filtering/: SUdipfilt.lnez  SUk1k2filter.lnez  SUkfilter.lnez  Subfilt.lnez  Sufilter.lnez  Sugabor.lnez  Sumedian.lnez
su/demos/From_Well_Logs/: From_Well_Logs-Sugoupillaud.lnez
su/demos/Making_Data/: CommonOffset.lnez  ShotGathers.lnez
su/demos/Migration Inversion/: Kirchhoff.lnez
su/demos/Migration_Inversion/: Kirchhoff_Offset.lnez  Kirchhoff_Shot.lnez  Post_Stack_3D_Impulse_Response.lnez  Post_Stack_Finite_Difference.lnez  Post_Stack_Fourier_FD.lnez  Post_Stack_Gazdag.lnez  Post_Stack_Impulse_Response.lnez  Post_Stack_Migration_PSTI.lnez  Post_Stack_PSPI.lnez  Post_Stack_Split-Step.lnez  Post_Stack_Stolt.lnez  Post_Stack_Suinvvxzco.lnez
su/demos/Plotting/: DashCurvesPS.lnez  Psimage_HLS.lnez  Psimage_RGB.lnez  SolidCurves.lnez
su/demos/Ray_Tracing/: Rayt2d.lnez  WKBJ.lnez
su/demos/Stacking_Traces/: Diversity_Stacking.lnez  Phase_Weighted_Stacking.lnez
su/demos/Synthetic/: Finite_Difference_Suea2df.lnez  Finite_Difference_Sufctanismod.lnez  Finite_Difference_Sufdmod1.lnez  Finite_Difference_Sufdmod2.lnez  Finite_Difference_Sufdmod2_PML.lnez  From_Well_Logs-SugoupillaudPO.lnez  From_Well_Logs-Suwellrf.lnez  Impulse.lnez  Kirchhoff_Sukdsyn.lnez  Kirchhoff_Susynlv.lnez  Kirchhoff_Susynlvcw.lnez  Kirchhoff_Susynlvfti.lnez  Reflectivity.lnez  Suaddevent.lnez  Suwaveform.lnez  Tetra.lnez  Tri-Models_NormRays.lnez  Tri-Rays.lnez  Tri_Seismograms.lnez  Trielas.lnez
su/demos/Time_Freq_Analysis/: Sugabor.lnez  Suphasevel.lnez  Sutvband.lnez
su/demos/Trace_Headers_and_Values/: Suascii.lnez  Sucountkey.lnez  Sudumptrace.lnez  Sukeycount.lnez
su/demos/Velocity_Analysis/: Rayt2dan.lnez  Suvel2df.lnez
su/demos/Velocity_Profiles/: Make_Vel.lnez  Marmousi.lnez  Unif2.lnez  Unisam2.lnez  Vel2stiff.lnez  Velconv.lnez
su/menus/: Makefile.am  a2b.mnu  a2i.mnu  b2a.mnu  bhedtopar.mnu  cdpfold.mnu  cellauto.mnu  cshotplot.mnu  dctcomp.mnu  dctuncomp.mnu  dt1tosu.mnu  dzdv.mnu  elamodel.mnu  elaps.mnu  elaray.mnu  elasyn.mnu  elatriuni.mnu  entropy.mnu  farith.mnu  fcat.mnu  float2ibm.mnu  ftnstrip.mnu  ftnunstrip.mnu  gbbeam.mnu  gebr-su-install.mnu  gebr-su-install.mnu.in  gebrrange.mnu  grm.mnu  h2b.mnu  hti2stiff.mnu  hudson.mnu  ibm2float.mnu  kaperture.mnu  las2su.mnu  linrort.mnu  makevel.mnu  maxdiff.mnu  mkparfile.mnu  mrafxzwt.mnu  normray.mnu  (+349 more)
su/scripts/: Makefile.am  gebr-su-install-14.04.sh  gebr-su-install.sh  gebrrange.sh
