# GeBR Menus SU - Seismic Unix menus for GeBR
# Copyright (C) 2008-2010 Ricardo Biloti <biloti@gebrproject.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

gebrdemosdir = $(datadir)/gebr/demos/seismicunix

gebrdemos_DATA = \
		Amplitude_Correction.prjz     \
		Deconvolution.prjz            \
		Dip_Moveout.prjz              \
		Filtering.prjz                \
		Making_Data.prjz              \
		Migration_Inversion.prjz      \
		Muting.prjz                   \
		NMO.prjz                      \
		Noise.prjz                    \
		Offset_Continuation.prjz      \
		Plotting.prjz                 \
		Ray_Tracing.prjz              \
		Stacking_Traces.prjz          \
		Synthetic.prjz                \
		Time_Freq_Analysis.prjz       \
		Trace_Headers_and_Values.prjz \
		Velocity_Analysis.prjz        \
		Velocity_Profiles.prjz

EXTRA_DIST = $(gebrdemos_DATA)
