# GeBR Menus SU - Seismic Unix menus for GeBR
# Copyright (C) 2008-2010 Ricardo Biloti <biloti@gebrproject.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

gebrdemosdir = $(datadir)/gebr/demos/Seismic_Unix

gebrdemos_DATA = \
		_Setup.prjx		      \
		Amplitude_Correction.prjx     \
		Block.prjx		      \
		Deconvolution.prjx            \
		Dip_Moveout.prjx              \
		Filtering.prjx                \
		Making_Data.prjx              \
		Migration_Inversion.prjx      \
		Muting.prjx                   \
		NMO.prjx                      \
		Noise.prjx                    \
		Offset_Continuation.prjx      \
		Plotting.prjx                 \
		Ray_Tracing.prjx              \
		Stacking_Traces.prjx          \
		Synthetic.prjx                \
		Time_Freq_Analysis.prjx       \
		Trace_Headers_and_Values.prjx \
		Velocity_Analysis.prjx        \
		Velocity_Profiles.prjx	      \
		Vibroseis_Sweeps.prjx


EXTRA_DIST = $(gebrdemos_DATA)
