# GeBR Menus SU - Seismic Unix menus for GeBR
# Copyright (C) 2008-2009 GeBR Core Team
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

gebrmenudir = $(datadir)/gebr/menus/seismicunix
gebrmenu_DATA = \
                a2b.mnu                \
                b2a.mnu                \
                dctcomp.mnu            \
                dctuncomp.mnu          \
                dzdv.mnu               \
                entropy.mnu            \
                fcat.mnu               \
                gbbeam.mnu             \
                grm.mnu                \
                h2b.mnu                \
                maxdiff.mnu            \
		mrafxzwt.mnu           \
                prplot.mnu             \
                psbbox.mnu             \
                psimage.mnu            \
                pslabel.mnu            \
                psmerge.mnu            \
                pswigb.mnu             \
                pswigp.mnu             \
                recip.mnu              \
                resamp.mnu             \
                segyhdrmod.mnu         \
                segyread.mnu           \
                segywrite.mnu          \
		smooth2.mnu            \
                su3dchart.mnu          \
                suabshw.mnu            \
                suacor.mnu             \
                suaddevent.mnu         \
                suaddhead.mnu          \
                suaddnoise.mnu         \
                suamp.mnu              \
                suattributes.mnu       \
                suazimuth.mnu          \
                subfilt.mnu            \
                subset.mnu             \
                suchart.mnu            \
                suchw.mnu              \
                sucmp.mnu              \
                suconv.mnu             \
                sucountkey.mnu         \
                sudiff.mnu             \
                sudipdivcor.mnu        \
		sudipfilt.mnu          \
                sudivcor.mnu           \
                sudivstack.mnu         \
                sueipofi.mnu           \
                sufdmod2.mnu           \
                sufft.mnu              \
                sufilter.mnu           \
                suflip.mnu             \
		sufrac.mnu             \
                sufxdecon.mnu          \
                sugabor.mnu            \
                sugain.mnu             \
                sugethw.mnu            \
		suharlan.mnu           \
                suhilb.mnu             \
                suhrot_file.mnu        \
                suhrot.mnu             \
                suhtmath.mnu           \
		suifft.mnu             \
                suilog.mnu             \
                suinterp.mnu           \
                suk1k2filter.mnu       \
                sukdmig2d.mnu          \
                sukeycount.mnu         \
                sukfilter.mnu          \
		sukfrac.mnu            \
                sukill.mnu             \
		sulog.mnu              \
                sumedian_byfile.mnu    \
                sumedian.mnu           \
                sumigfd.mnu            \
                sumigffd.mnu           \
                sumiggbzo.mnu          \
                sumigprefd.mnu         \
                sumigpreffd.mnu        \
                sumigprepspi.mnu       \
                sumigpresp.mnu         \
                sumigpspi.mnu          \
                sumigsplit.mnu         \
                sumixgathers.mnu       \
                sumix.mnu              \
                sumute_byfile.mnu      \
                sumute.mnu             \
                sunan.mnu              \
                sunmo.mnu              \
                sunull.mnu             \
                suop2.mnu              \
                suop.mnu               \
                supack1.mnu            \
                supack2.mnu            \
                supef.mnu              \
                supermute.mnu          \
                supgc.mnu              \
                suplane.mnu            \
                supofilt.mnu           \
                supolar.mnu            \
                supsimage.mnu          \
                supswigb.mnu           \
                supswigp.mnu           \
                supws.mnu              \
                suquantile.mnu         \
                suradon.mnu            \
                suramp.mnu             \
                surange.mnu            \
                surecip.mnu            \
                sureduce.mnu           \
                surelanan.mnu          \
                surelan.mnu            \
                suresamp.mnu           \
                suresstat.mnu          \
                sushape.mnu            \
                sushw.mnu              \
                susort.mnu             \
                susorty.mnu            \
                suspecfk.mnu           \
                suspecfx.mnu           \
                suspike.mnu            \
                sustack.mnu            \
                sustatic_file.mnu      \
                sustatic.mnu           \
                sustaticrrs-1.mnu      \
                sustaticrrs-2.mnu      \
                sustaticrrs-3.mnu      \
                sustaticrrs-4.mnu      \
                sustaticrrs-5.mnu      \
                sustolt.mnu            \
                sustrip.mnu            \
                suswapbytes.mnu        \
                sutab.mnu              \
                sutaper.mnu            \
                sutaup.mnu             \
                sutetraray.mnu         \
                sutihalednmo.mnu       \
                sutivel.mnu            \
                sutsq.mnu              \
                suttoz.mnu             \
                sutxtaper.mnu          \
                suvcat.mnu             \
                suvel2df.mnu           \
                suvelan.mnu            \
                suvelan_nccs.mnu       \
                suvelan_nsel.mnu       \
                suvelan_uccs.mnu       \
                suvelan_usel.mnu       \
                suvibro.mnu            \
                suvlength.mnu          \
                suwaveform.mnu         \
                suweight.mnu           \
                suwellrf-1.mnu         \
                suwellrf-2.mnu         \
                suwellrf-3.mnu         \
                suwind.mnu             \
                suximage.mnu           \
                suximage-simple.mnu    \
                suxmovie.mnu           \
                suxpicker.mnu          \
                suxwigb.mnu            \
                suxwigb-simple.mnu     \
                suzero.mnu             \
                suztot.mnu             \
                swapbytes.mnu          \
                transp.mnu             \
                triseis.mnu            \
                tvnmoqc.mnu            \
                unglitch.mnu           \
                uni2tri.mnu            \
                unif2.mnu              \
                velpertan.mnu          \
                velpert.mnu            \
                wpc1comp2.mnu          \
                wpc1uncomp2.mnu        \
                wpccompress.mnu        \
                wpcuncompress.mnu      \
                wptcomp.mnu            \
                wptuncomp.mnu          \
                wtcomp.mnu             \
                wtuncomp.mnu           \
                ximage.mnu             \
                xmovie.mnu             \
                xpicker.mnu            \
                xwigb.mnu

EXTRA_DIST = $(gebrmenu_DATA)


