# GeBR Menus SU - Seismic Unix menus for GeBR Copyright (C) 2008-2010 Ricardo
# Biloti <biloti@gebrproject.com>
#
# This program is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program.  If not, see <http://www.gnu.org/licenses/>.

gebrmenudir = $(datadir)/gebr/menus/seismicunix

gebrmenu_DATA = \
                a2b.mnu                \
                b2a.mnu                \
                bhedtopar.mnu          \
                dctcomp.mnu            \
                dctuncomp.mnu          \
                dt1tosu.mnu            \
                dzdv.mnu               \
                entropy.mnu            \
                farith.mnu             \
                fcat.mnu               \
                ftnstrip.mnu           \
                ftnunstrip.mnu         \
                gbbeam.mnu             \
                grm.mnu                \
                h2b.mnu                \
                kaperture.mnu          \
                makevel.mnu            \
                maxdiff.mnu            \
		mrafxzwt.mnu           \
                normray.mnu            \
                prplot.mnu             \
                psbbox.mnu             \
                pscontour.mnu          \
                pscubecontour.mnu      \
                pscube.mnu             \
                psepsi.mnu             \
		psgraph.mnu            \
                psimage.mnu            \
                pslabel.mnu            \
                psmerge.mnu            \
                psmovie.mnu            \
                pswigb.mnu             \
                pswigp.mnu             \
                rayt2d.mnu             \
                recast.mnu             \
                recip.mnu              \
                resamp.mnu             \
                segyclean.mnu          \
                segyhdrmod.mnu         \
                segyhdrs.mnu           \
                segyread.mnu           \
                segywrite.mnu          \
                setbhed.mnu            \
		smooth2.mnu            \
                smooth3d.mnu           \
                smoothint2.mnu         \
                spsplot.mnu            \
                su3dchart.mnu          \
                suabshw.mnu            \
                suacor.mnu             \
                suaddevent.mnu         \
                suaddhead.mnu          \
                suaddnoise.mnu         \
                suamp.mnu              \
                suascii.mnu            \
                suattributes.mnu       \
                suazimuth.mnu          \
                subfilt.mnu            \
                subset.mnu             \
                suchart.mnu            \
                suchw.mnu              \
                sucmp.mnu              \
                suconv.mnu             \
                sucountkey.mnu         \
                sudatumfd.mnu          \
                sudatumk2dr.mnu        \
                sudatumk2ds.mnu        \
                sudiff.mnu             \
                sudipdivcor.mnu        \
		sudipfilt.mnu          \
                sudivcor.mnu           \
                sudivstack.mnu         \
                sudmofkcw.mnu          \
                sudmofk.mnu            \
                sudmotivz.mnu          \
                sudmotx.mnu            \
                sudmovz.mnu            \
                suea2df.mnu            \
                sueipofi.mnu           \
                sufdmod1.mnu           \
                sufdmod2.mnu           \
                sufdmod2_pml.mnu       \
                sufft.mnu              \
                sufilter.mnu           \
                suflip.mnu             \
		sufrac.mnu             \
                sufxdecon.mnu          \
                sugabor.mnu            \
                sugain.mnu             \
                sugazmig.mnu           \
                sugethw.mnu            \
                suget.mnu              \
		suharlan.mnu           \
                suhilb.mnu             \
                suhrot_file.mnu        \
                suhrot.mnu             \
                suhtmath.mnu           \
		suifft.mnu             \
                suilog.mnu             \
                suimp2d.mnu            \
                suimp3d.mnu            \
                suinterp.mnu           \
                suintvel.mnu           \
                suinvzco3d.mnu         \
                suk1k2filter.mnu       \
                sukdmig2d.mnu          \
                sukdmig3d.mnu          \
                sukdsyn2d.mnu          \
                sukeycount.mnu         \
                sukfilter.mnu          \
		sukfrac.mnu            \
                sukill.mnu             \
                suktmig2d.mnu          \
		sulog.mnu              \
                sumean.mnu             \
                sumedian_byfile.mnu    \
                sumedian.mnu           \
                sumigfd.mnu            \
                sumigffd.mnu           \
                sumiggbzoan.mnu        \
                sumiggbzo.mnu          \
                sumigprefd.mnu         \
                sumigpreffd.mnu        \
                sumigprepspi.mnu       \
                sumigpresp.mnu         \
                sumigps.mnu            \
                sumigpspi.mnu          \
                sumigpsti.mnu          \
                sumigsplit.mnu         \
                sumigtk.mnu            \
                sumigtopo2d.mnu        \
                sumixgathers.mnu       \
                sumix.mnu              \
                sumute_byfile.mnu      \
                sumute.mnu             \
                sunan.mnu              \
                sunmo.mnu              \
                sunormalize.mnu        \
                sunull.mnu             \
                suoldtonew.mnu         \
                suop2.mnu              \
                suop.mnu               \
                supack1.mnu            \
                supack2.mnu            \
                supaste.mnu            \
                supef.mnu              \
                supermute.mnu          \
                supgc.mnu              \
                supickamp.mnu          \
                suplane.mnu            \
                supofilt.mnu           \
                supolar.mnu            \
                supscontour.mnu        \
                supscubecontour.mnu    \
                supscube.mnu           \
		supsgraph.mnu          \
                supsimage.mnu          \
                supsmovie.mnu          \
                supswigb.mnu           \
                supswigp.mnu           \
                suput.mnu              \
                supws.mnu              \
                suquantile.mnu         \
                suradon.mnu            \
                suramp.mnu             \
                surange.mnu            \
                surecip.mnu            \
                sureduce.mnu           \
                surelanan.mnu          \
                surelan.mnu            \
                suresamp.mnu           \
                suresstat.mnu          \
                sushape-1.mnu          \
                sushape-2.mnu          \
                sushape-3.mnu          \
                sushift.mnu            \
                sushw.mnu              \
                susort.mnu             \
                susorty.mnu            \
                suspecfk.mnu           \
                suspecfx.mnu           \
		suspeck1k2.mnu         \
                suspike.mnu            \
                sustack.mnu            \
                sustatic_file.mnu      \
                sustatic.mnu           \
                sustaticrrs-1.mnu      \
                sustaticrrs-2.mnu      \
                sustaticrrs-3.mnu      \
                sustaticrrs-4.mnu      \
                sustaticrrs-5.mnu      \
                sustkvel.mnu           \
                sustolt.mnu            \
                sustrip.mnu            \
                suswapbytes.mnu        \
                susyncz.mnu            \
                susynlvcw.mnu          \
                susynlvfti.mnu         \
                susynlv.mnu            \
                susynvxzcs.mnu         \
                susynvxz.mnu           \
                sutab.mnu              \
                sutaper.mnu            \
                sutaup.mnu             \
                sutetraray.mnu         \
                sutihaledmo.mnu        \
                sutivel.mnu            \
                sutsq.mnu              \
                suttoz.mnu             \
		sutvband.mnu           \
                sutxtaper.mnu          \
		suunpack1.mnu          \
		suunpack2.mnu          \
                suvcat.mnu             \
                suvel2df.mnu           \
                suvelan.mnu            \
                suvelan_nccs.mnu       \
                suvelan_nsel.mnu       \
                suvelan_uccs.mnu       \
                suvelan_usel.mnu       \
                suvibro.mnu            \
                suvlength.mnu          \
                suwaveform.mnu         \
                suweight.mnu           \
                suwellrf-1.mnu         \
                suwellrf-2.mnu         \
                suwellrf-3.mnu         \
                suwind.mnu             \
                suxcontour.mnu         \
                suxcor-all.mnu         \
		suxcor.mnu             \
                suximage.mnu           \
                suximage-simple.mnu    \
                suxmovie.mnu           \
                suxpicker.mnu          \
                suxwigb.mnu            \
                suxwigb-simple.mnu     \
                suzero.mnu             \
                suztot.mnu             \
                swapbytes.mnu          \
                sxplot.mnu             \
                transp.mnu             \
                triseis.mnu            \
                tvnmoqc.mnu            \
                unglitch.mnu           \
                uni2tri.mnu            \
                unif2.mnu              \
                unisam2.mnu            \
                unisam_file1.mnu       \
                unisam_file2.mnu       \
                unisam.mnu             \
                velconv.mnu            \
                velpertan.mnu          \
                velpert.mnu            \
                wpc1comp2.mnu          \
                wpc1uncomp2.mnu        \
                wpccompress.mnu        \
                wpcuncompress.mnu      \
                wptcomp.mnu            \
                wptuncomp.mnu          \
                wtcomp.mnu             \
                wtuncomp.mnu           \
                xcontour.mnu           \
		xgraph.mnu             \
                ximage.mnu             \
                xmovie.mnu             \
                xpicker.mnu            \
                xrects.mnu             \
                xwigb.mnu              \
                z2xyz.mnu

EXTRA_DIST = $(gebrmenu_DATA)






















