# GeBR Menus SU - Seismic Unix menus for GeBR
# Copyright (C) 2008-2010 Ricardo Biloti <biloti@gebrproject.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

gebrmenudir = $(datadir)/gebr/menus/seismicunix

gebrmenu_DATA = \
		a2b.mnu                \
		a2i.mnu                \
		b2a.mnu                \
		bhedtopar.mnu          \
		cdpfold.mnu            \
		cellauto.mnu           \
		cshotplot.mnu          \
		dctcomp.mnu            \
		dctuncomp.mnu          \
		dt1tosu.mnu            \
		dzdv.mnu               \
		elamodel.mnu           \
		elaps.mnu              \
		elaray.mnu             \
		elasyn.mnu             \
		elatriuni.mnu          \
		entropy.mnu            \
		farith.mnu             \
		fcat.mnu               \
		float2ibm.mnu          \
		ftnstrip.mnu           \
		ftnunstrip.mnu         \
		gbbeam.mnu             \
		grm.mnu                \
		h2b.mnu                \
		hti2stiff.mnu          \
		hudson.mnu             \
		ibm2float.mnu          \
		kaperture.mnu          \
		las2su.mnu             \
		linrort.mnu            \
		makevel.mnu            \
		maxdiff.mnu            \
		mkparfile.mnu          \
		mrafxzwt.mnu           \
		normray.mnu            \
		parsesukeycount.mnu    \
		prplot.mnu             \
		psbbox.mnu             \
		pscontour.mnu          \
		pscubecontour.mnu      \
		pscube.mnu             \
		psepsi.mnu             \
		psgraph.mnu            \
		psimage.mnu            \
		pslabel.mnu            \
		psmerge.mnu            \
		psmovie.mnu            \
		pswigb.mnu             \
		pswigp.mnu             \
		randvel3d.mnu          \
		raydata.mnu            \
		rayt2dan.mnu           \
		rayt2d.mnu             \
		recast.mnu             \
		recip.mnu              \
		refRealAziHTI.mnu      \
		refRealVTI.mnu         \
		regrid3.mnu            \
		resamp.mnu             \
		segbread.mnu           \
		segdread.mnu           \
		segyclean.mnu          \
		segyhdrmod.mnu         \
		segyhdrs.mnu           \
		segyread.mnu           \
		segywrite.mnu          \
		setbhed.mnu            \
		smooth2.mnu            \
		smooth3d.mnu           \
		smoothint2.mnu         \
		spsplot.mnu            \
		stiff2vel.mnu          \
		su3dchart.mnu          \
		suabshw.mnu            \
		suacorfrac.mnu         \
		suacor.mnu             \
		suaddevent.mnu         \
		suaddhead.mnu          \
		suaddnoise.mnu         \
		suaddstatics.mnu       \
		sualford.mnu           \
		suamp.mnu              \
		suascii.mnu            \
		suattributes.mnu       \
		suazimuth.mnu          \
		subackush.mnu          \
		subackus.mnu           \
		subfilt.mnu            \
		subset.mnu             \
		succfilt.mnu           \
		succwt.mnu             \
		sucddecon.mnu          \
		sucdpbin.mnu           \
		sucentsamp.mnu         \
		sucepstrum.mnu         \
		suchart.mnu            \
		suchw.mnu              \
		sucliphead.mnu         \
		sucmp.mnu              \
		suconv.mnu             \
		sucountkey.mnu         \
		sucvs4fowler.mnu       \
		sucwt.mnu              \
		sudatumfd.mnu          \
		sudatumk2dr.mnu        \
		sudatumk2ds.mnu        \
		sudiff.mnu             \
		sudipdivcor.mnu        \
		sudipfilt.mnu          \
		sudivcor.mnu           \
		sudivstack.mnu         \
		sudmofkcw.mnu          \
		sudmofk.mnu            \
		sudmotivz.mnu          \
		sudmotx.mnu            \
		sudmovz.mnu            \
		sudumptrace.mnu        \
		suea2df.mnu            \
		sueipofi.mnu           \
		sufctanismod.mnu       \
		sufdmod1.mnu           \
		sufdmod2.mnu           \
		sufdmod2_pml.mnu       \
		sufft.mnu              \
		sufilter.mnu           \
		suflip.mnu             \
		sufnzero.mnu           \
		sufrac.mnu             \
		sufwatrim.mnu          \
		sufwmix.mnu            \
		sufxdecon.mnu          \
		sugabor.mnu            \
		sugain.mnu             \
		sugassmann.mnu         \
		sugausstaper.mnu       \
		sugazmig.mnu           \
		sugetgthr.mnu          \
		sugethw.mnu            \
		suget.mnu              \
		sugoupillaud.mnu       \
		sugoupillaudpo.mnu     \
		sugprfb.mnu            \
		suharlan.mnu           \
		suhilb.mnu             \
		suhrot_file.mnu        \
		suhrot.mnu             \
		suhtmath.mnu           \
		suifft.mnu             \
		suilog.mnu             \
		suimp2d.mnu            \
		suimp3d.mnu            \
		suimpedance.mnu        \
		suinterpfowler.mnu     \
		suinterp.mnu           \
		suintvel.mnu           \
		suinvvxzco.mnu         \
		suinvzco3d.mnu         \
		sujitter.mnu           \
		suk1k2filter.mnu       \
		sukdmig2d.mnu          \
		sukdmig3d.mnu          \
		sukdsyn2d.mnu          \
		sukeycount.mnu         \
		sukfilter.mnu          \
		sukfrac.mnu            \
		sukill.mnu             \
		suktmig2d.mnu          \
		sulcthw.mnu            \
		sulfaf.mnu             \
		sulhead.mnu            \
		sulog.mnu              \
		sulprime.mnu           \
		sultt.mnu              \
		sumax.mnu              \
		sumean.mnu             \
		sumedian_byfile.mnu    \
		sumedian.mnu           \
		sumigfd.mnu            \
		sumigffd.mnu           \
		sumiggbzoan.mnu        \
		sumiggbzo.mnu          \
		sumigprefd.mnu         \
		sumigpreffd.mnu        \
		sumigprepspi.mnu       \
		sumigpresp.mnu         \
		sumigps.mnu            \
		sumigpspi.mnu          \
		sumigpsti.mnu          \
		sumigsplit.mnu         \
		sumigtk.mnu            \
		sumigtopo2d.mnu        \
		sumixgathers.mnu       \
		sumix.mnu              \
		sumute_byfile.mnu      \
		sumute.mnu             \
		sunan.mnu              \
		sunhmospike.mnu        \
		sunmo.mnu              \
		sunormalize.mnu        \
		sunull.mnu             \
		suocext.mnu            \
		suoldtonew.mnu         \
		suop2.mnu              \
		suop.mnu               \
		supack1.mnu            \
		supack2.mnu            \
		supaste.mnu            \
		supef.mnu              \
		supermute.mnu          \
		supgc.mnu              \
		suphase.mnu            \
		suphasevel.mnu         \
		suphidecon.mnu         \
		supickamp.mnu          \
		suplane.mnu            \
		supofilt.mnu           \
		supolar.mnu            \
		suprod.mnu             \
		supscontour.mnu        \
		supscubecontour.mnu    \
		supscube.mnu           \
		supsgraph.mnu          \
		supsimage.mnu          \
		supsmax.mnu            \
		supsmovie.mnu          \
		supswigb.mnu           \
		supswigp.mnu           \
		suptdiff.mnu           \
		suptprod.mnu           \
		suptquo.mnu            \
		suptsum.mnu            \
		suputgthr.mnu          \
		suput.mnu              \
		supws.mnu              \
		suquantile.mnu         \
		suquo.mnu              \
		suradon.mnu            \
		suramp.mnu             \
		surandspike.mnu        \
		surandstat.mnu         \
		surange.mnu            \
		surecip.mnu            \
		sureduce.mnu           \
		surefcon.mnu           \
		sureflpsvsh.mnu        \
		surelanan.mnu          \
		surelan.mnu            \
		suresamp.mnu           \
		suresstat.mnu          \
		susehw.mnu             \
		sushape-1.mnu          \
		sushape-2.mnu          \
		sushape-3.mnu          \
		sushift.mnu            \
		sushw.mnu              \
		suslowft.mnu           \
		suslowift.mnu          \
		susmgauss2.mnu         \
		susort.mnu             \
		susorty.mnu            \
		suspecfk.mnu           \
		suspecfx.mnu           \
		suspeck1k2.mnu         \
		suspike.mnu            \
		susplit.mnu            \
		sustack.mnu            \
		sustatic_file.mnu      \
		sustatic.mnu           \
		sustaticrrs-1.mnu      \
		sustaticrrs-2.mnu      \
		sustaticrrs-3.mnu      \
		sustaticrrs-4.mnu      \
		sustaticrrs-5.mnu      \
		sustkvel.mnu           \
		sustolt.mnu            \
		sustrip.mnu            \
		susum.mnu              \
		suswapbytes.mnu        \
		susyncz.mnu            \
		susynlvcw.mnu          \
		susynlvfti.mnu         \
		susynlv.mnu            \
		susynvxzcs.mnu         \
		susynvxz.mnu           \
		sutab.mnu              \
		sutaper.mnu            \
		sutaup.mnu             \
		sutetraray.mnu         \
		sutifowler.mnu         \
		sutihaledmo.mnu        \
		sutivel.mnu            \
		sutrcount.mnu          \
		sutsq.mnu              \
		suttoz.mnu             \
		sutvband.mnu           \
		sutxtaper.mnu          \
		suunpack1.mnu          \
		suunpack2.mnu          \
		suutm.mnu              \
		suvcat.mnu             \
		suvel2df.mnu           \
		suvelan.mnu            \
		suvelan_nccs.mnu       \
		suvelan_nsel.mnu       \
		suvelan_uccs.mnu       \
		suvelan_usel.mnu       \
		suvibro.mnu            \
		suvlength.mnu          \
		suwaveform.mnu         \
		suweight.mnu           \
		suwellrf-1.mnu         \
		suwellrf-2.mnu         \
		suwellrf-3.mnu         \
		suwfft.mnu             \
		suwind.mnu             \
		suwindpoly.mnu         \
		suxcontour.mnu         \
		suxcor-all.mnu         \
		suxcor.mnu             \
		suxgraph.mnu           \
		suximage.mnu           \
		suximage-simple.mnu    \
		suxmax.mnu             \
		suxmovie.mnu           \
		suxpicker.mnu          \
		suxwigb.mnu            \
		suxwigb-simple.mnu     \
		suzero.mnu             \
		suztot.mnu             \
		swapbytes.mnu          \
		sxplot.mnu             \
		tetramod.mnu           \
		thom2hti.mnu           \
		thom2stiff.mnu         \
		transp3d.mnu           \
		transp.mnu             \
		tri2uni.mnu            \
		trimodel.mnu           \
		trip.mnu               \
		triray.mnu             \
		triseis.mnu            \
		trisoplot.mnu          \
		triview.mnu            \
		tvnmoqc.mnu            \
		unglitch.mnu           \
		uni2tri.mnu            \
		unif2aniso.mnu         \
		unif2.mnu              \
		unif2_nostdio.mnu      \
		unisam2.mnu            \
		unisam_file1.mnu       \
		unisam_file2.mnu       \
		unisam.mnu             \
		utmconv.mnu            \
		vel2stiff.mnu          \
		velconv.mnu            \
		velpertan.mnu          \
		velpert.mnu            \
		viewer3.mnu            \
		vtlvz.mnu              \
		wkbj.mnu               \
		wpc1comp2.mnu          \
		wpc1uncomp2.mnu        \
		wpccompress.mnu        \
		wpcuncompress.mnu      \
		wptcomp.mnu            \
		wptuncomp.mnu          \
		wtcomp.mnu             \
		wtuncomp.mnu           \
		xcontour.mnu           \
		xgraph.mnu             \
		ximage.mnu             \
		xmovie.mnu             \
		xpicker.mnu            \
		xrects.mnu             \
		xwigb.mnu              \
		xy2z.mnu               \
		z2xyz.mnu

EXTRA_DIST = $(gebrmenu_DATA)

